Version 4   2011-January-23

--Fixed vertical screen position after zoom.

--Fixed health bar mismatch if power-up picked up right before rise.

--Fixed bug that caused tutorial power-ups to be present in lower levels upon
  restart even when tutorial has already been completed.

--Removed accuracy power-up to improve feel of basic shooting, and also because
  its effect was hard to notice, making it confusing.

--Made rapid fire more rapid at lower levels so it's easier to notice.

--Made heat seek more noticeable at low levels, and much stronger at high 
  levels.

--Made bullet speed faster at lower levels so it's easier to notice.

--Changed default set to [speed,heart,heart] to make shooting feel better
  at start of game.  Knock-down still results in [empty,heart,heart].

--Fixed timing of brief player immortality on rise-out.

--Fixed heat seek targeting to prevent it from jumping oddly between targets.

--Added a blended overlay to soften background tile colors.

--Shrank level maximum dimensions to 96x96 instead of 128x128.  Less wandering.

--Added glowing shimmer over player, enemies, and power tokens, with trails 
  for motion.

--Added drop shadows along wall edges.

--Added drop shadows under player, enemies, bullets, tokens, and crosshair.

--Changed so that current powers are carried down when intentionally entering
  something (though not when unintentionally knocked-down).

--Changed so that current powers revert to default when you are knocked down,
  forcing you to gather new powers before rising back out (no more rushing
  through after being knocked down).

--When inside a power token, in case of tie, right-most sub-power dominates.

--Added dimming of sub-powers inside a power token to make majority formula
  easier to understand.

--Made special enemy behaviors more likely at lower levels.

--Fixed issues with uneven weighting of enemy sub-powers.

--Enemy behavior tokens now each imply two extra hearts, to make up for the