@@ -1,3 +1,8 @@
+Version 5
+
+--Fixed tutorial crash (thanks Stephen Lavelle).
+
+
 Version 4   2011-January-23
 
 --Fixed vertical screen position after zoom.
